// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RecurringRunsManager calls API to load recurring runs 1`] = `
<Fragment>
  <Toolbar
    actions={Array []}
    breadcrumbs={Array []}
    pageTitle="Recurring runs"
  />
  <CustomTable
    columns={
      Array [
        Object {
          "customRenderer": [Function],
          "flex": 2,
          "label": "Run name",
          "sortKey": "name",
        },
        Object {
          "flex": 2,
          "label": "Created at",
          "sortKey": "created_at",
        },
        Object {
          "customRenderer": [Function],
          "flex": 1,
          "label": "",
        },
      ]
    }
    disableSelection={true}
    emptyMessage="No recurring runs found in this experiment."
    initialSortColumn="created_at"
    reload={[Function]}
    rows={
      Array [
        Object {
          "error": undefined,
          "id": "job1",
          "otherFields": Array [
            "test recurring run name",
            "11/9/2018, 8:07:06 AM",
            true,
          ],
        },
        Object {
          "error": undefined,
          "id": "job2",
          "otherFields": Array [
            "test recurring run name2",
            "11/9/2018, 8:07:06 AM",
            false,
          ],
        },
        Object {
          "error": undefined,
          "id": "job3",
          "otherFields": Array [
            "test recurring run name3",
            "11/9/2018, 8:07:06 AM",
            undefined,
          ],
        },
      ]
    }
    selectedIds={Array []}
    updateSelection={[Function]}
  />
</Fragment>
`;

exports[`RecurringRunsManager reloads the list of runs after enable/disabling 1`] = `
<Button
  className="root"
  classes={
    Object {
      "colorInherit": "MuiButton-colorInherit-115",
      "contained": "MuiButton-contained-105",
      "containedPrimary": "MuiButton-containedPrimary-106",
      "containedSecondary": "MuiButton-containedSecondary-107",
      "disabled": "MuiButton-disabled-114",
      "extendedFab": "MuiButton-extendedFab-112",
      "fab": "MuiButton-fab-111",
      "flat": "MuiButton-flat-99",
      "flatPrimary": "MuiButton-flatPrimary-100",
      "flatSecondary": "MuiButton-flatSecondary-101",
      "focusVisible": "MuiButton-focusVisible-113",
      "fullWidth": "MuiButton-fullWidth-119",
      "label": "MuiButton-label-95",
      "mini": "MuiButton-mini-116",
      "outlined": "MuiButton-outlined-102",
      "outlinedPrimary": "MuiButton-outlinedPrimary-103",
      "outlinedSecondary": "MuiButton-outlinedSecondary-104",
      "raised": "MuiButton-raised-108",
      "raisedPrimary": "MuiButton-raisedPrimary-109",
      "raisedSecondary": "MuiButton-raisedSecondary-110",
      "root": "MuiButton-root-94",
      "sizeLarge": "MuiButton-sizeLarge-118",
      "sizeSmall": "MuiButton-sizeSmall-117",
      "text": "MuiButton-text-96",
      "textPrimary": "MuiButton-textPrimary-97",
      "textSecondary": "MuiButton-textSecondary-98",
    }
  }
  color="primary"
  component="button"
  disableFocusRipple={false}
  disabled={false}
  fullWidth={false}
  mini={false}
  onClick={[Function]}
  size="medium"
  type="button"
  variant="text"
>
  <WithStyles(ButtonBase)
    className="MuiButton-root-94 MuiButton-text-96 MuiButton-textPrimary-97 MuiButton-flat-99 MuiButton-flatPrimary-100 root"
    component="button"
    disabled={false}
    focusRipple={true}
    focusVisibleClassName="MuiButton-focusVisible-113"
    onClick={[Function]}
    type="button"
  >
    <ButtonBase
      centerRipple={false}
      className="MuiButton-root-94 MuiButton-text-96 MuiButton-textPrimary-97 MuiButton-flat-99 MuiButton-flatPrimary-100 root"
      classes={
        Object {
          "disabled": "MuiButtonBase-disabled-15",
          "focusVisible": "MuiButtonBase-focusVisible-16",
          "root": "MuiButtonBase-root-14",
        }
      }
      component="button"
      disableRipple={false}
      disableTouchRipple={false}
      disabled={false}
      focusRipple={true}
      focusVisibleClassName="MuiButton-focusVisible-113"
      onClick={[Function]}
      tabIndex="0"
      type="button"
    >
      <button
        className="MuiButtonBase-root-14 MuiButton-root-94 MuiButton-text-96 MuiButton-textPrimary-97 MuiButton-flat-99 MuiButton-flatPrimary-100 root"
        disabled={false}
        onBlur={[Function]}
        onClick={[Function]}
        onContextMenu={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex="0"
        type="button"
      >
        <span
          className="MuiButton-label-95"
        >
          <span>
            Enabled
          </span>
        </span>
        <NoSsr
          defer={false}
          fallback={null}
        >
          <WithStyles(TouchRipple)
            center={false}
            innerRef={[Function]}
          >
            <TouchRipple
              center={false}
              classes={
                Object {
                  "child": "MuiTouchRipple-child-91",
                  "childLeaving": "MuiTouchRipple-childLeaving-92",
                  "childPulsate": "MuiTouchRipple-childPulsate-93",
                  "ripple": "MuiTouchRipple-ripple-88",
                  "ripplePulsate": "MuiTouchRipple-ripplePulsate-90",
                  "rippleVisible": "MuiTouchRipple-rippleVisible-89",
                  "root": "MuiTouchRipple-root-87",
                }
              }
            >
              <TransitionGroup
                childFactory={[Function]}
                className="MuiTouchRipple-root-87"
                component="span"
                enter={true}
                exit={true}
              >
                <span
                  className="MuiTouchRipple-root-87"
                />
              </TransitionGroup>
            </TouchRipple>
          </WithStyles(TouchRipple)>
        </NoSsr>
      </button>
    </ButtonBase>
  </WithStyles(ButtonBase)>
</Button>
`;

exports[`RecurringRunsManager renders a disable button if the run is enabled, clicking the button calls disable API 1`] = `
<Button
  className="root"
  classes={
    Object {
      "colorInherit": "MuiButton-colorInherit-115",
      "contained": "MuiButton-contained-105",
      "containedPrimary": "MuiButton-containedPrimary-106",
      "containedSecondary": "MuiButton-containedSecondary-107",
      "disabled": "MuiButton-disabled-114",
      "extendedFab": "MuiButton-extendedFab-112",
      "fab": "MuiButton-fab-111",
      "flat": "MuiButton-flat-99",
      "flatPrimary": "MuiButton-flatPrimary-100",
      "flatSecondary": "MuiButton-flatSecondary-101",
      "focusVisible": "MuiButton-focusVisible-113",
      "fullWidth": "MuiButton-fullWidth-119",
      "label": "MuiButton-label-95",
      "mini": "MuiButton-mini-116",
      "outlined": "MuiButton-outlined-102",
      "outlinedPrimary": "MuiButton-outlinedPrimary-103",
      "outlinedSecondary": "MuiButton-outlinedSecondary-104",
      "raised": "MuiButton-raised-108",
      "raisedPrimary": "MuiButton-raisedPrimary-109",
      "raisedSecondary": "MuiButton-raisedSecondary-110",
      "root": "MuiButton-root-94",
      "sizeLarge": "MuiButton-sizeLarge-118",
      "sizeSmall": "MuiButton-sizeSmall-117",
      "text": "MuiButton-text-96",
      "textPrimary": "MuiButton-textPrimary-97",
      "textSecondary": "MuiButton-textSecondary-98",
    }
  }
  color="primary"
  component="button"
  disableFocusRipple={false}
  disabled={false}
  fullWidth={false}
  mini={false}
  onClick={[Function]}
  size="medium"
  type="button"
  variant="text"
>
  <WithStyles(ButtonBase)
    className="MuiButton-root-94 MuiButton-text-96 MuiButton-textPrimary-97 MuiButton-flat-99 MuiButton-flatPrimary-100 root"
    component="button"
    disabled={false}
    focusRipple={true}
    focusVisibleClassName="MuiButton-focusVisible-113"
    onClick={[Function]}
    type="button"
  >
    <ButtonBase
      centerRipple={false}
      className="MuiButton-root-94 MuiButton-text-96 MuiButton-textPrimary-97 MuiButton-flat-99 MuiButton-flatPrimary-100 root"
      classes={
        Object {
          "disabled": "MuiButtonBase-disabled-15",
          "focusVisible": "MuiButtonBase-focusVisible-16",
          "root": "MuiButtonBase-root-14",
        }
      }
      component="button"
      disableRipple={false}
      disableTouchRipple={false}
      disabled={false}
      focusRipple={true}
      focusVisibleClassName="MuiButton-focusVisible-113"
      onClick={[Function]}
      tabIndex="0"
      type="button"
    >
      <button
        className="MuiButtonBase-root-14 MuiButton-root-94 MuiButton-text-96 MuiButton-textPrimary-97 MuiButton-flat-99 MuiButton-flatPrimary-100 root"
        disabled={false}
        onBlur={[Function]}
        onClick={[Function]}
        onContextMenu={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex="0"
        type="button"
      >
        <span
          className="MuiButton-label-95"
        >
          <span>
            Enabled
          </span>
        </span>
        <NoSsr
          defer={false}
          fallback={null}
        >
          <WithStyles(TouchRipple)
            center={false}
            innerRef={[Function]}
          >
            <TouchRipple
              center={false}
              classes={
                Object {
                  "child": "MuiTouchRipple-child-91",
                  "childLeaving": "MuiTouchRipple-childLeaving-92",
                  "childPulsate": "MuiTouchRipple-childPulsate-93",
                  "ripple": "MuiTouchRipple-ripple-88",
                  "ripplePulsate": "MuiTouchRipple-ripplePulsate-90",
                  "rippleVisible": "MuiTouchRipple-rippleVisible-89",
                  "root": "MuiTouchRipple-root-87",
                }
              }
            >
              <TransitionGroup
                childFactory={[Function]}
                className="MuiTouchRipple-root-87"
                component="span"
                enter={true}
                exit={true}
              >
                <span
                  className="MuiTouchRipple-root-87"
                />
              </TransitionGroup>
            </TouchRipple>
          </WithStyles(TouchRipple)>
        </NoSsr>
      </button>
    </ButtonBase>
  </WithStyles(ButtonBase)>
</Button>
`;

exports[`RecurringRunsManager renders an enable button if the run is disabled, clicking the button calls enable API 1`] = `
<Button
  className="root"
  classes={
    Object {
      "colorInherit": "MuiButton-colorInherit-115",
      "contained": "MuiButton-contained-105",
      "containedPrimary": "MuiButton-containedPrimary-106",
      "containedSecondary": "MuiButton-containedSecondary-107",
      "disabled": "MuiButton-disabled-114",
      "extendedFab": "MuiButton-extendedFab-112",
      "fab": "MuiButton-fab-111",
      "flat": "MuiButton-flat-99",
      "flatPrimary": "MuiButton-flatPrimary-100",
      "flatSecondary": "MuiButton-flatSecondary-101",
      "focusVisible": "MuiButton-focusVisible-113",
      "fullWidth": "MuiButton-fullWidth-119",
      "label": "MuiButton-label-95",
      "mini": "MuiButton-mini-116",
      "outlined": "MuiButton-outlined-102",
      "outlinedPrimary": "MuiButton-outlinedPrimary-103",
      "outlinedSecondary": "MuiButton-outlinedSecondary-104",
      "raised": "MuiButton-raised-108",
      "raisedPrimary": "MuiButton-raisedPrimary-109",
      "raisedSecondary": "MuiButton-raisedSecondary-110",
      "root": "MuiButton-root-94",
      "sizeLarge": "MuiButton-sizeLarge-118",
      "sizeSmall": "MuiButton-sizeSmall-117",
      "text": "MuiButton-text-96",
      "textPrimary": "MuiButton-textPrimary-97",
      "textSecondary": "MuiButton-textSecondary-98",
    }
  }
  color="secondary"
  component="button"
  disableFocusRipple={false}
  disabled={false}
  fullWidth={false}
  mini={false}
  onClick={[Function]}
  size="medium"
  type="button"
  variant="text"
>
  <WithStyles(ButtonBase)
    className="MuiButton-root-94 MuiButton-text-96 MuiButton-textSecondary-98 MuiButton-flat-99 MuiButton-flatSecondary-101 root"
    component="button"
    disabled={false}
    focusRipple={true}
    focusVisibleClassName="MuiButton-focusVisible-113"
    onClick={[Function]}
    type="button"
  >
    <ButtonBase
      centerRipple={false}
      className="MuiButton-root-94 MuiButton-text-96 MuiButton-textSecondary-98 MuiButton-flat-99 MuiButton-flatSecondary-101 root"
      classes={
        Object {
          "disabled": "MuiButtonBase-disabled-15",
          "focusVisible": "MuiButtonBase-focusVisible-16",
          "root": "MuiButtonBase-root-14",
        }
      }
      component="button"
      disableRipple={false}
      disableTouchRipple={false}
      disabled={false}
      focusRipple={true}
      focusVisibleClassName="MuiButton-focusVisible-113"
      onClick={[Function]}
      tabIndex="0"
      type="button"
    >
      <button
        className="MuiButtonBase-root-14 MuiButton-root-94 MuiButton-text-96 MuiButton-textSecondary-98 MuiButton-flat-99 MuiButton-flatSecondary-101 root"
        disabled={false}
        onBlur={[Function]}
        onClick={[Function]}
        onContextMenu={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex="0"
        type="button"
      >
        <span
          className="MuiButton-label-95"
        >
          <span>
            Disabled
          </span>
        </span>
        <NoSsr
          defer={false}
          fallback={null}
        >
          <WithStyles(TouchRipple)
            center={false}
            innerRef={[Function]}
          >
            <TouchRipple
              center={false}
              classes={
                Object {
                  "child": "MuiTouchRipple-child-91",
                  "childLeaving": "MuiTouchRipple-childLeaving-92",
                  "childPulsate": "MuiTouchRipple-childPulsate-93",
                  "ripple": "MuiTouchRipple-ripple-88",
                  "ripplePulsate": "MuiTouchRipple-ripplePulsate-90",
                  "rippleVisible": "MuiTouchRipple-rippleVisible-89",
                  "root": "MuiTouchRipple-root-87",
                }
              }
            >
              <TransitionGroup
                childFactory={[Function]}
                className="MuiTouchRipple-root-87"
                component="span"
                enter={true}
                exit={true}
              >
                <span
                  className="MuiTouchRipple-root-87"
                />
              </TransitionGroup>
            </TouchRipple>
          </WithStyles(TouchRipple)>
        </NoSsr>
      </button>
    </ButtonBase>
  </WithStyles(ButtonBase)>
</Button>
`;

exports[`RecurringRunsManager renders an enable button if the run's enabled field is undefined, clicking the button calls enable API 1`] = `
<Button
  className="root"
  classes={
    Object {
      "colorInherit": "MuiButton-colorInherit-115",
      "contained": "MuiButton-contained-105",
      "containedPrimary": "MuiButton-containedPrimary-106",
      "containedSecondary": "MuiButton-containedSecondary-107",
      "disabled": "MuiButton-disabled-114",
      "extendedFab": "MuiButton-extendedFab-112",
      "fab": "MuiButton-fab-111",
      "flat": "MuiButton-flat-99",
      "flatPrimary": "MuiButton-flatPrimary-100",
      "flatSecondary": "MuiButton-flatSecondary-101",
      "focusVisible": "MuiButton-focusVisible-113",
      "fullWidth": "MuiButton-fullWidth-119",
      "label": "MuiButton-label-95",
      "mini": "MuiButton-mini-116",
      "outlined": "MuiButton-outlined-102",
      "outlinedPrimary": "MuiButton-outlinedPrimary-103",
      "outlinedSecondary": "MuiButton-outlinedSecondary-104",
      "raised": "MuiButton-raised-108",
      "raisedPrimary": "MuiButton-raisedPrimary-109",
      "raisedSecondary": "MuiButton-raisedSecondary-110",
      "root": "MuiButton-root-94",
      "sizeLarge": "MuiButton-sizeLarge-118",
      "sizeSmall": "MuiButton-sizeSmall-117",
      "text": "MuiButton-text-96",
      "textPrimary": "MuiButton-textPrimary-97",
      "textSecondary": "MuiButton-textSecondary-98",
    }
  }
  color="secondary"
  component="button"
  disableFocusRipple={false}
  disabled={false}
  fullWidth={false}
  mini={false}
  onClick={[Function]}
  size="medium"
  type="button"
  variant="text"
>
  <WithStyles(ButtonBase)
    className="MuiButton-root-94 MuiButton-text-96 MuiButton-textSecondary-98 MuiButton-flat-99 MuiButton-flatSecondary-101 root"
    component="button"
    disabled={false}
    focusRipple={true}
    focusVisibleClassName="MuiButton-focusVisible-113"
    onClick={[Function]}
    type="button"
  >
    <ButtonBase
      centerRipple={false}
      className="MuiButton-root-94 MuiButton-text-96 MuiButton-textSecondary-98 MuiButton-flat-99 MuiButton-flatSecondary-101 root"
      classes={
        Object {
          "disabled": "MuiButtonBase-disabled-15",
          "focusVisible": "MuiButtonBase-focusVisible-16",
          "root": "MuiButtonBase-root-14",
        }
      }
      component="button"
      disableRipple={false}
      disableTouchRipple={false}
      disabled={false}
      focusRipple={true}
      focusVisibleClassName="MuiButton-focusVisible-113"
      onClick={[Function]}
      tabIndex="0"
      type="button"
    >
      <button
        className="MuiButtonBase-root-14 MuiButton-root-94 MuiButton-text-96 MuiButton-textSecondary-98 MuiButton-flat-99 MuiButton-flatSecondary-101 root"
        disabled={false}
        onBlur={[Function]}
        onClick={[Function]}
        onContextMenu={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex="0"
        type="button"
      >
        <span
          className="MuiButton-label-95"
        >
          <span>
            Disabled
          </span>
        </span>
        <NoSsr
          defer={false}
          fallback={null}
        >
          <WithStyles(TouchRipple)
            center={false}
            innerRef={[Function]}
          >
            <TouchRipple
              center={false}
              classes={
                Object {
                  "child": "MuiTouchRipple-child-91",
                  "childLeaving": "MuiTouchRipple-childLeaving-92",
                  "childPulsate": "MuiTouchRipple-childPulsate-93",
                  "ripple": "MuiTouchRipple-ripple-88",
                  "ripplePulsate": "MuiTouchRipple-ripplePulsate-90",
                  "rippleVisible": "MuiTouchRipple-rippleVisible-89",
                  "root": "MuiTouchRipple-root-87",
                }
              }
            >
              <TransitionGroup
                childFactory={[Function]}
                className="MuiTouchRipple-root-87"
                component="span"
                enter={true}
                exit={true}
              >
                <span
                  className="MuiTouchRipple-root-87"
                />
              </TransitionGroup>
            </TouchRipple>
          </WithStyles(TouchRipple)>
        </NoSsr>
      </button>
    </ButtonBase>
  </WithStyles(ButtonBase)>
</Button>
`;

exports[`RecurringRunsManager renders run name as link to its details page 1`] = `
<Link
  className="link"
  replace={false}
  to="/recurringrun/details/run-id"
>
  <a
    className="link"
    href="/recurringrun/details/run-id"
    onClick={[Function]}
  >
    test-run
  </a>
</Link>
`;
